# ezbuild

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-examples.yml  lint.yml  pypi-publish.yml  test.yml
examples/conditional-build-c/: build.ezbuild  curl.c  main.c
examples/defines-c/: build.ezbuild  main.c
examples/defines-cxx/: build.ezbuild  main.cpp
examples/public-defines-c/: build.ezbuild  lib.c  lib.h  main.c
examples/public-defines-cxx/: build.ezbuild  lib.cxx  lib.hxx  main.cxx
examples/public-defines-multi-c/: build.ezbuild  lib1.c  lib1.h  lib2.c  lib2.h  main.c
examples/simple-c/: build.ezbuild
examples/simple-cxx/: build.ezbuild
examples/simple-dep-shared-c/: build.ezbuild  dep.h
examples/simple-dep-shared-cxx/: build.ezbuild  dep.hxx
examples/simple-dep-static-c/: build.ezbuild  simple.c
examples/simple-dep-static-cxx/: build.ezbuild  dep.cxx  simple.cxx
examples/simple-shared-library-c/: build.ezbuild
examples/simple-shared-library-cxx/: build.ezbuild  simple.cxx
examples/simple-static-library-c/: build.ezbuild  simple.c  simple.h
examples/simple-static-library-cxx/: build.ezbuild  simple.hxx
examples/system-lib-c/: build.ezbuild  main.c
examples/system-lib-cxx/: build.ezbuild  main.cxx
src/ezbuild/: __init__.py  (+9 more)
tests/: test_cli.py  test_compile_command.py  test_dep_tree.py  test_environment.py  test_language.py  test_log.py  test_main.py  test_pkg_config.py  test_python_environment.py  test_safe_exec.py
utils/: build-examples.py  version.py
(+11 files in other folders)
